# RoughSDE-MacTensor

./: .gitignore  CMakeLists.txt  README.md
python/: ablation.py  benchmark.py  grad_check.py  neural_sde.py  train.py
src/: bindings.cpp  data_gen.cpp  sde_solver.cpp  signatures.cpp
